fixing font size issues on mobile

--- a/src/assets/stylesheets/Listing.css
+++ b/src/assets/stylesheets/Listing.css
@@ -113,6 +113,20 @@
 
     position: absolute;
     top: -30px;
+  }
 
+  .additional-info {
+    font-size: .75em;
+  }
+}
+
+@media only screen and (max-width: 350px) {
+  .company-name {
+    font-size: .7em;
+
+  }
+
+  .additional-info {
+    font-size: .6em;
   }
 }
